2014-03-06  Ian Dunn  <dunni@gnu.org>

	* process.c (get_quant_var): Gets a quantifier variable.
	(check_quants): Implements get_quant_var to check the
	quantifier variables.

	* typedef.h (CHECK_ALLOC): Enclosed object in parentheses.

	* sentence.c (sentence_text_changed): Don't add any undo
	information for goals.

	* sexpr-process-equiv.c (proc_ep): Fixed processing bug.

	* aio.c (aio_save): Version line only writes two digits.

	* Makefile.am: Fixed up linker flags, and cleaned up.

2014-03-02  Ian Dunn  <dunni@gnu.org>

	* configure.ac: Moved configure check for pkg-config to just
	before actual package checks.

	* sexpr-process-equiv.c: Added defines for recurse_mode modes.
	(recurse_mode): Implemented mode definitions.
	(proc_id): Same.
	(proc_co): Same.

	* sexpr-process.c (sexpr_get_generalities): Clear out vector after finding
	invalid connective.
	(sexpr_car): Removed.
	(sexpr_cdr): Removed.
	(sexpr_car_cdr): Added comments.
	(sexpr_str_car_cdr): Same.
	(construct_other): Same.

	* process.h (IS_SBIN_CONN): Checks whether a string is a
	binary sexpr connective.

	* vec.c (vec_str_clear): Added.

2014-03-01  Ian Dunn  <dunni@gnu.org>

	* aio.h (VER_TAG): Added for versioning files.
	(FILE_VER): Set to 1.0.

	* aio.c (aio_save): Added version number to file format.
	(aio_open): Same.

	* conf-file.h (main_menu_conf): Changed export label to
	'Export to LaTeX...'.

	* sentence.c (sentence_init): Added rules box identifier for
	subproofs.

	* aris-proof.c (aris_proof_post_init): Replaced the separator.
	(aris_proof_create_sentence): Ignores new_order parameter of
	sen_parent_ins_sentence.
	(aris_proof_init_from_proof): Replaced the separator.
	(aris_proof_end_sub): Prevents a subproof from being cut in
	half.
	(aris_proof_to_latex): Checks for a valid filename before
	exporting.

	* sen-parent.c (sen_parent_ins_sentence): Accounts for the
	separator in proofs.

2014-02-28  Ian Dunn  <dunni@gnu.org>

	* pound.h (INIT_FONT): Changed font type to